<resources>
    <string name="app_name">Fitness Companion</string>

    <string name="title">Fitness \nCompanion</string>
    <string name="forgetPass"><b><i><u>Forget Password</u></i></b></string>
    <string name="signUp"><b><i><u>Sign Up</u></i></b></string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="name">Name</string>
    <string name="pass2">Confirm Password</string>
    <string name="dob">Date of Birth</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="addPhoto">Select Profile Picture</string>
    <string name="home">Home</string>
    <string name="actvity">Activity</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>
    <string name="passRecovery"><b>Password Recovery</b></string>
    <string name="update">Update</string>

    <string name="recovery">Recovery</string>
    <string name="cancel">Cancel</string>
    <string name="required">This Field Is Required</string>
    <string name="error_name">Symbols and Digits Are Not Allow</string>
    <string name="error_email">Invalid Email Format</string>
    <string name="error_pass">Symbols Are Not Allow</string>
    <string name="error_pass2">Be at least 6 characters</string>
    <string name="error_pass3">Confirm password did not match</string>
    <string name="noInternet">No Internet Connection</string>

    <string name="recoverySuccess">We have sent a new password to your email address</string>
    <string name="recoveryFail">The email address is not registered of Fitness Companion account </string>

    <string name="sync">Synchronizing with server</string>
    <string name="checkVer_msg">Your App is updated</string>
    <string name="checkVer2_msg">No updated version</string>
    <string name="loading_activity">Updating activity data....</string>
    <string name="loading_email">Checking Email Address....</string>
    <string name="loading_version">Checking Version.....</string>
    <string name="signUpEmail">This Email Address Already Used</string>
    <string name="loading_recovery">Send Password Recovery Request</string>
    <string name="loading_process">Processing...... </string>
    <string name="signUpSuccess">Register Success.\nPlease active your account by email</string>
    <string name="exitMsg">Press the back button once again to close the application.</string>
    <string name="login_title">Login Success</string>
    <string name="login_msg">Downloading user data...</string>
    <string name="login_fail">Invalid Email or password</string>
    <string name="login_active">Please check your email to active account</string>
    <string name="setting">Setting</string>
    <string name="signOut">Sign Out</string>
    <string name="signOut_Msg">Are you sure you want to sign out ?</string>
    <string name="feedback"><b>Feedback</b></string>
    <string name="feedbackMsg">We are glad to receive your feedback</string>
    <string name="rating">Rating : </string>
    <string name="comment">Comment</string>
    <string name="aboutUs"><b>About Us</b></string>
    <string name="appType">Fitness Application</string>
    <string name="policy"><b>Private Policy</b></string>
    <string name="policyMsg">Any information that is collected via our services is covered by the privacy policy in effect at the time such information is collected. We may revise this privacy policy form time to time. </string>
    <string name="close">Close</string>
    <string name="changePass">Change Password</string>
    <string name="change">Change</string>
    <string name="newPass">New Password</string>
    <string name="oldPass">Old Password</string>
    <string name="splash_hello">Hello</string>
    <string name="splash_welcome"><i>Welcome Let"'"s get ready</i></string>

    <array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </array>
    <array name="photoArray">
        <item>Camera</item>
        <item>Gallery</item>
        <item>Cancel</item>
    </array>
    <array name="profileMenuTitle">
        <item>Achievement</item>
        <item>Reminder</item>
        <item>Change Password</item>
        <item>Setting</item>
    </array>
    <integer-array name="profileMenuImage">
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
    </integer-array>

    <array name="settingMenuTitle">
        <item>About Us</item>
        <item>Feedback</item>
        <item>Sign Out</item>
    </array>
    <integer-array name="settingMenuImage">
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
    </integer-array>

    <!--BMI-->
    <string name="BMI_title"><b>BMI</b></string>
    <string name="BMI_underweight">Lower than 18.5</string>
    <string name="BMI_normalweight">18.5 "-" 24.9</string>
    <string name="BMI_overweight">25.0 "-" 29.9</string>
    <string name="BMI_obesity">Greater than 30.0</string>

    <string name="status_title"><b>Weight Status</b></string>
    <string name="status_underweight">Underweight</string>
    <string name="status_normalweight">Normal Weight</string>
    <string name="status_Overweight">Overweight</string>
    <string name="status_Obesity">Obesity</string>

    <string name="BMI"><b>Body Mass Index :</b></string>
    <string name="BMI_range">Average range of healthy BMI is 18.5 - 24.9</string>


    <!--Profile-->
    <string name="profile_actionbar">Profile</string>
    <string name="personal_info"><b>Personal Info</b></string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>

    <string name="contact_info"><b>Contact Info</b></string>

    <string name="body_info"><b>Body Info</b></string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>

    <!--Update Profile-->
    <string name="update_name">Update Nickname</string>
    <string name="button_update">Update</string>
    <string name="update_img_successful">Image Successful Updated</string>
    <string name="update_img_unsuccessful">Update Image Unsuccessful</string>

    <!--Progress Home-->
    <string name="steps">Steps</string>

    <array name="bmi_status">
        <item>
            <b>Well Done!\nYou are in healthy range</b>
        </item>
        <item>
            <b>You are underweight\nYou should gain more weight</b>
        </item>
        <item>
            <b>Oh Dear!\nYou are overweight\nPlease reduce your weight</b>
        </item>
    </array>

    <array name="HomeList">
        <item>BMI</item>
        <item>Goals</item>
        <item>Status</item>
        <item>Calories Intake</item>
    </array>

    <integer-array name="HomeListImage">
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
        <item>@drawable/ic_action_edit</item>
    </integer-array>

    <!--Record Setting-->
    <string name="record_setting">Record Setting</string>
    <string name="record_description">Set your record before continue to next process</string>
    <string name="button_confirm">Confirm</string>
    <string name="target_info"><b>Target Info</b></string>
    <string name="record_activitykcal">Activity Calories(kcal)</string>

    <!--Goals-->
    <integer-array name="ThumbImage">
        <item>@drawable/ic_action_thumbsdown</item>
        <item>@drawable/ic_action_thumbsup</item>
    </integer-array>
    <string name="goals">Goals</string>
    <string name="current_steps"><b>Current Steps</b></string>
    <string name="target_steps"><b>Target Steps</b></string>
    <string name="current_weight"><b>Current Weight</b></string>
    <string name="target_weight"><b>Target Weight</b></string>
    <string name="current_kcal"><b>Current Kcal</b></string>
    <string name="target_kcal"><b>Target Kcal</b></string>
    <string name="goals_activitykcal">Activity\nCalories(kcal)</string>

    <!--Achievement-->
    <integer-array name="AwardImage">
        <item>@drawable/ic_action_none</item>
        <item>@drawable/ic_action_junior</item>
        <item>@drawable/ic_action_bronze</item>
        <item>@drawable/ic_action_silver</item>
        <item>@drawable/ic_action_gold</item>
    </integer-array>
    <string-array name="AwardTitle">
        <item><b>No Award</b></item>
        <item><b>Junior Award</b></item>
        <item><b>Bronze Award</b></item>
        <item><b>Silver Award</b></item>
        <item><b>Golden Award</b></item>
    </string-array>


    <array name="seekBarTitle">
        <item>Edit Height</item>
        <item>Edit Weight</item>
    </array>

    <array name="seekBarType">
        <item>Height(cm)</item>
        <item>Weight(kg)</item>
    </array>

    <string name="achievement">Achievement</string>
    <string name="activitytype">Activity Type : </string>
    <string name="toptitle"><b>Top 10 Rank List</b></string>

    <!--testing-->
    <string-array name="AwardDesc">
        <item><b>50mins</b></item>
        <item><b>30mins</b></item>
        <item><b>20mins</b></item>
        <item><b>10mins</b></item>
        <item><b>10mins</b></item>
    </string-array>

    <!--exercise-->
    <string name="exercise">Exercise</string>
    <string name="description">\nYou have 5 seconds to get ready.\nDo more exercise to earn medal point.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="end">End</string>
    <string name="restart">Restart</string>
    <string name="resume">Resume</string>

    <!--ExeDetail-->
    <string name="exetime">Exercise Time</string>
    <string name="duration">Duration</string>
    <string name="execalories">Calories Require</string>

    <!--Activity-->
    <string name="type"><b>Type</b> : </string>
    <string name="calories"><b>Calories</b> : </string>
    <string name="time"><b>Time</b> : </string>
    <string name="recommand"><b>Recomanded</b></string>
    <string name="common"><b>Common</b></string>

    <!--Reminder-->
    <string name="reminder">Reminder</string>

    <string-array name="occurence">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="pref_alarm_play_time_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string-array name="pref_alarm_play_time_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
</resources>
