<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/aboutUs"
        android:textSize="12pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:textSize="8pt"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/logo_drawer"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <View
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/appType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="10dp"
        android:text="@string/policy"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>


    <TextView
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/policyMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
