<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fitnesscompanion.com.View.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background">


   <RelativeLayout
       android:layout_marginTop="100dp"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <fitnesscompanion.com.Util.CircleImageView
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:layout_centerVertical="true"
           android:layout_marginLeft="20dp"
           android:src="@drawable/logo_drawer"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/title"
           android:textStyle="bold"
           android:textSize="25dp"
           android:layout_marginRight="20dp"
           android:layout_centerVertical="true"
           android:layout_alignParentRight="true"/>
   </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/editEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        android:id="@+id/layoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <EditText
            android:id="@+id/editPass"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:onClick="onClickForgetPass"
            android:clickable="true"
            android:text="@string/forgetPass"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"/>

        <TextView
            android:onClick="onClickSignUp"
            android:clickable="true"
            android:text="@string/signUp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"/>
    </RelativeLayout>


    <Button
        android:onClick="onClickSignIn"
        android:background="@drawable/roundcorner"
        android:text="@string/signIn"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
