<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/feedback"
        android:textSize="12pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="8pt"
        android:layout_gravity="center"
        android:text="@string/feedbackMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/rateBar"
            android:theme="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:hint="@string/comment"
            android:id="@+id/editComment"
            android:maxLength="255"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_marginRight="20dp"
            android:background="@drawable/roundcorner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnOk"
            android:text="@string/feedback"
            android:background="@drawable/roundcorner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>




</LinearLayout>
