<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <fitnesscompanion.com.Util.CircleImageView
            android:id="@+id/img_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:civ_border_width="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_logo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/type"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_logo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_logo"
            android:layout_below="@+id/txt_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/calories"/>

        <TextView
            android:id="@+id/txt_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_logo"
            android:layout_below="@+id/txt_name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="90dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_logo"
            android:layout_below="@+id/txt_calories"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_logo"
            android:layout_below="@+id/txt_calories"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"/>
    </RelativeLayout>
</LinearLayout>